--- a/Chat Project/Chat.Api/appsettings.json
+++ b/Chat Project/Chat.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChatDb": "User ID-postgres;Password-20010410; Host-localhost; Port-5433; Database-ChatDb;"
+  }
 }
