--- a/Chat Project/Chat.Api/appsettings.json
+++ b/Chat Project/Chat.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatDb": "User ID=postgres;Password=20010410; Host=localhost; Port=5432; Database=ChatDb;"
+    "ChatDb": "User ID=postgres;Password=20010410; Host=localhost; Port=5432; Database=NewChatDb;"
   }
 }
