--- a/Chat.Api.csproj
+++ b/Chat.Api.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Mapster" Version="7.4.1-pre01" />
     <PackageReference Include="Mapster.Core" Version="1.2.2-pre01" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.1.24452.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
@@ -28,6 +29,20 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Chat.Client\obj\Chat.Client.csproj.nuget.dgspec.json" />
+    <_ContentIncludedByDefault Remove="Chat.Client\obj\project.assets.json" />
+    <_ContentIncludedByDefault Remove="Chat.Client\obj\project.packagespec.json" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Properties\launchSettings.json" />
+    <_ContentIncludedByDefault Remove="Chat.Client\wwwroot\sample-data\weather.json" />
+    <_ContentIncludedByDefault Remove="Chat.Client\App.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Layout\MainLayout.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Layout\NavMenu.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Pages\Counter.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Pages\Home.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\Pages\Weather.razor" />
+    <_ContentIncludedByDefault Remove="Chat.Client\_Imports.razor" />
   </ItemGroup>
 
 </Project>
