--- a/Chat Project/Chat.Client/Chat.Client.csproj
+++ b/Chat Project/Chat.Client/Chat.Client.csproj
@@ -7,8 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="9.0.0-rc.1.24452.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authorization.Policy" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.8" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="8.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.8"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.8" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+        <PackageReference Include="Nancy.Authentication.StatelessAuthorizationHeader" Version="0.1.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.0" />
     </ItemGroup>
 
 </Project>
