--- a/Chat Project/Chat.Api/appsettings.json
+++ b/Chat Project/Chat.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ChatDb": "User ID=postgres;Password=20010410; Host=localhost; Port=5432; Database=NewChatDb;"
+  },
+  "JwtParameters": {
+    "Issuer" : "Chat.Api",
+    "Audience" : "Chat.Client",
+    "Key" : "secretkeyhusah7846823467"
+    
   }
 }
