--- a/Chat Project/Chat.Api/Chat.Api.csproj
+++ b/Chat Project/Chat.Api/Chat.Api.csproj
@@ -30,5 +30,17 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.14" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Model\TextModel\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Model\TextModel\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Model\TextModel\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Model\TextModel\**" />
+  </ItemGroup>
 
 </Project>
