--- a/Chat Project/Chat.Api/appsettings.json
+++ b/Chat Project/Chat.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChatDb": "User ID=postgres;Password=pasword;Host=localhost;Port=5433;Database=ChatDb;"
+    "ChatDb": "User ID=postgres;Password=20010410;Host=localhost;Port=5432;Database=NewChatDb;"
   },
   "JwtParameters": {
     "Issuer": "Chat.Api",
