Code rub All Code

--- a/Individual Projects/Online Course Managment System Project/Course.Api/appsettings.json
+++ b/Individual Projects/Online Course Managment System Project/Course.Api/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChatDb": "User ID=postgres;Password=20010410;Host=localhost;Port=5432;Database=CourseDb;"
+  },
+  "JwtParameters": {
+    "Issuer": "Course.Api",
+    "Audience": "Course.Client",
+    "Key": "qwertyuiopasdfgh1234567890"
+  }
 }
